[gd_scene load_steps=14 format=3 uid="uid://dc7wh4iup8f1n"]

[ext_resource type="Texture2D" uid="uid://73m45ohknfwp" path="res://Assets/Dice/six sided die.png" id="1_iwd21"]
[ext_resource type="Script" path="res://Scripts/dice_canvas.gd" id="1_w5tu5"]
[ext_resource type="FontFile" uid="uid://cfn4j4hj7c5yf" path="res://Assets/Fonts/dogica.ttf" id="2_c2k7o"]
[ext_resource type="Texture2D" uid="uid://cpx1qif76cggq" path="res://Assets/Backgrounds/background.png" id="2_tkemo"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8kvf2"]
diffuse_texture = ExtResource("2_tkemo")

[sub_resource type="LabelSettings" id="LabelSettings_0de3c"]
font_size = 22
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_o71ke"]
atlas = ExtResource("1_iwd21")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wf8d"]
atlas = ExtResource("1_iwd21")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_efjfv"]
atlas = ExtResource("1_iwd21")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a1lh"]
atlas = ExtResource("1_iwd21")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jino"]
atlas = ExtResource("1_iwd21")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5traj"]
atlas = ExtResource("1_iwd21")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_t4cj4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o71ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wf8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efjfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a1lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jino")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5traj")
}],
"loop": true,
"name": &"dice_sides",
"speed": 10.0
}]

[node name="DiceCanvas" type="CanvasLayer"]
script = ExtResource("1_w5tu5")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -220.0
offset_right = 313.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_8kvf2")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_c2k7o")
text = "Turno del Jugador #########"
label_settings = SubResource("LabelSettings_0de3c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -78.0
offset_right = 76.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_c2k7o")
theme_override_font_sizes/font_size = 20
text = "Lanzar"

[node name="dice" type="AnimatedSprite2D" parent="."]
position = Vector2(695, 1080)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_t4cj4")
animation = &"dice_sides"
frame = 3
frame_progress = 0.850963

[node name="dice2" type="AnimatedSprite2D" parent="."]
position = Vector2(903, 1080)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_t4cj4")
animation = &"dice_sides"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="TextureRect/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
